# Cygnus

./: .gitignore  Cargo.toml  Readme.md  build.sh  test.plist
src/: compiler.rs  error.rs  lexer.rs  main.rs  new_action.rs  parser.rs  short_script.pest
src/backend/: arguments_match_definition.rs  compile_string.rs  mod.rs
src/compiler/: arguments_match_definition.rs  mod.rs
src/frontend/: ast.rs  mod.rs  parse_arguments.rs  parse_statements.rs  parse_string.rs  parse_types.rs
src/frontend/type_checker/: arguments_match_definition.rs  mod.rs
src/middleend/: mod.rs
src/middleend/optimizations/: mod.rs  optimize_arguments.rs  optimize_string.rs
src/parser/: ast.rs  mod.rs  parse_arguments.rs  parse_statements.rs  parse_types.rs
unsign_shortcut/: Cargo.toml
unsign_shortcut/src/: main.rs
