[package]
name = "Cygnus"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "unsign_shortcut"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

# [[bin]]
# name = "unsign_shortcut"
# path = "unsign_shortcut/src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
serde.workspace = true
pest = "2.7"
pest_derive = "2.7"
plist = "1.6"
tempfile = "3.9"
anyhow = "1.0"
thiserror = "1.0"
